Move SC and SL to incubator module